--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <div style="display:inline-block; padding-top: 100px; margin-right: 40px; margin-left: 40px;">
             <div class="image" style="display:inline-block;">
                 <div class="subimage">
-                    <img src="wasim.jpeg" width="300px" style="margin-left: auto; margin-right: auto; display: block; margin-top:100px;">
+                    <img src="wasim.jpg" width="300px" style="margin-left: auto; margin-right: auto; display: block; margin-top:100px;">
                     <p style="text-align:center;padding-top:20px; font-size:0.95em;color:#001C55; padding-right: 70px; padding-left: 70px; max-width:500px">Photo of me at the Boeing, taken April 2023</p>
                 </div>
             </div>
