Linkedin and mai address change

--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
             <span class="tooltiptext" style="margin-bottom:-15px">GitHub</span>
         </div>
         <div class="tooltip">
-            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px;margin-right:10px;" onmouseover="shadow('linkedinicon')" onmouseout="unshadow('linkedinicon')" onclick="window.open('https://www.linkedin.com/in/skrajibulhuda','_blank')">
+            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px;margin-right:10px;" onmouseover="shadow('linkedinicon')" onmouseout="unshadow('linkedinicon')" onclick="window.open('https://www.linkedin.com/in/mdwasimakram','_blank')">
                 <i id="linkedinicon" class="fa fa-linkedin-square" style="color:#001C55; width:50px; border-radius:12px;"> </i>
             </div>
             <span class="tooltiptext" style="margin-bottom:-15px">LinkedIn</span>
         </div>
         <div class="tooltip">
-            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px;margin-right:10px;" onmouseover="shadow('emailicon')" onmouseout="unshadow('emailicon')" onclick="window.open('mailto:skrajibulhuda@gmail.com')">
+            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px;margin-right:10px;" onmouseover="shadow('emailicon')" onmouseout="unshadow('emailicon')" onclick="window.open('mailto:akramw574@gmail.com')">
                 <i id="emailicon" class="fa fa-envelope" style="color:#001C55;cursor:pointer; width:60px; border-radius: 8px;"></i>
             </div>
             <span class="tooltiptext" style="margin-bottom:-15px;">Email</span>
