--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <div id="Contact" style="width:100%; text-align:center; float:left; padding-top:75px; margin-top:-30px; margin-bottom:0px;min-width:600px">
         <h1 style="font-size:2.3em; text-align: center">Contact Me</h1><br>
-        <p style="font-size:1.1em; margin-bottom:15px;">Feel free to send a message on LinkedIn...<br> or send me an email at skrajibulhuda@gmail.com.</p>
+        <p style="font-size:1.1em; margin-bottom:15px;">Feel free to send a message on LinkedIn...<br> or send me an email at akramw574@gmail.com.</p>
         <div class="tooltip">
             <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px; margin-right:10px;" onmouseover="shadow('giticon')" onmouseout="unshadow('giticon')" onclick="window.open('https://github.com/rajibul007','_blank')">
                 <i id="giticon" class="fa fa-github" style="color:#001C55; border-radius: 100px; width:50px"></i>
