--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                 <p style="float:left;margin-top: 10px; font-size:1.0em;color:#001C55;font-weight:400">Objective: Upgrade and seamlessly migrate data, configurations, and workflows from the existing VMware Workspace ONE Unified Endpoint Management (UEM) tool to the latest version, ensuring minimal disruption and maximizing the benefits of upgraded features.</p><br>
                 <p style="float:left;margin-top: 10px; font-size:1.0em;color:#808080;font-weight:400">Updated on Dec 2021</p><br>
                 <div style="float:right;position:absolute;bottom:10px;right:17px">
-                    <div class="tooltip"><img src="https://img.icons8.com/color/48/000000/python.png" width="35px" /><span class="tooltiptext">Python</span></div>
+                    <div class="tooltip"><img src="https://play-lh.googleusercontent.com/c56o73YLu_aOoM70X_QKFWlI-JY0zOQgS2IHQyBEQbBpcVc5Tg_JQBSVKxNf7Qd6zQ" width="35px" /><span class="tooltiptext">VMware Workspace ONE</span></div>
                 </div>
             </div>
         </div>
