--- a/index.html
+++ b/index.html
@@ -438,17 +438,35 @@
                         <p style="margin-top: 10px; font-size:0.9em;color:#001C55;font-weight:400; text-align: center; margin-bottom:20px;">VMware Workspace ONE Architecture</p>
                     </div>
                     <div style="float:right; width:50%; text-align:left; padding:10px; margin-top:45px; padding-left:20px">
-                        <p style="float:left;margin-top: 10px; font-size:0.9em;color:#001C55;font-weight:400; text-align: left">
-                            Final project for Cisco CX-Cloud-Agent  where I worked on a team of 7 to collects telemetry data from customer network devices to deliver actionable insights for customer <br><br> Developed Python app for to run command on host from POD(Rest-api , flask , JWT , sqllite ,sqlalchemy) 
-                            Micro service upgradation with nested helm chart and rollback features implementation 
-                            Ubuntu OS Screen implementation to take input from user using LINUX GUI Programming 
-                            Upgrade Patch creation, CI-CD continuous testing and manage repository(dev,stage,prod) .
-                            Replace Kubeadm to k3s , Etcd to sqllite and docker to containerd for better performance
-                            Deploy multiple micro service successfully on Next Generation light-weight product
-                            Implementation to After successful deployment, new screen to show OTP using LINUX GUI PROGRAMMING
-                            Light-weight Traefik implementation and tested with hardening using host network to use Proxy
-                            IP reassignment in Kubeadm for dhcp support ,secure k8s env using IPTABLES 
-                            k8s hardening playbook -implement multiple plugin , admission controller ,authorization policy 
+                        <p style="float:left;margin-top: 10px; font-size:0.5em;color:#001C55;font-weight:650; text-align: left">
+                            The Workspace ONE UEM Upgrade project aims to ensure the seamless transition of the Workspace ONE UEM environment to the latest version, enhancing functionality, security, and performance. 
+                            This project involves meticulous planning, execution, and validation steps to minimize disruption to operations and maximize the benefits of the upgrade.<br><br>
+                            
+                            Workspace ONE UEM Upgrade Prerequisites:<br>
+                            Identification and fulfillment of prerequisites necessary for a successful upgrade,
+                            including hardware and software requirements, compatibility checks, and environment preparation.<br><br>
+                            Workspace ONE UEM Upgrade Procedure Checklist:<br>
+                            Development of a comprehensive checklist outlining the step-by-step procedures for executing the upgrade,
+                            including pre-upgrade tasks, upgrade steps, and post-upgrade validation.<br><br>
+                            Prepare for Your Upgrade:<br>
+                            Detailed planning and coordination to ensure all stakeholders are informed about the upgrade schedule,
+                            impact, and mitigation strategies. This phase involves communication, scheduling downtime, and resource allocation.<br><br>
+                            Back Up Workspace ONE UEM Databases and Servers:<br>
+                            Implementation of backup procedures to safeguard critical data and configurations before proceeding with the upgrade. 
+                            This includes backing up databases, server configurations, and any customizations.<br><br>
+                            Stop Workspace ONE UEM Services:<br>
+                            Temporary suspension of Workspace ONE UEM services to prevent data inconsistencies and ensure a clean upgrade process.
+                            This step involves stopping services on all relevant servers and devices.<br><br>
+                            Upgrade Database, Console Server, and Device Services Server:<br>
+                            Execution of the upgrade process for the Workspace ONE UEM components, including the database, console server, and device services server.
+                            This involves following vendor-provided instructions and performing necessary configurations.<br><br>
+                            Workspace ONE UEM Post-Upgrade Validation:<br>
+                            Thorough validation of the upgraded environment to confirm successful completion of the upgrade and functionality of critical features. 
+                            This includes testing core functionalities, verifying data integrity, and user acceptance testing.<br><br>
+                            Conclusion:<br>
+                            The Workspace ONE UEM Upgrade project is crucial for maintaining a secure, efficient, and up-to-date mobility management platform. 
+                            By adhering to best practices and diligently executing each phase of the upgrade process, the project aims to minimize risks and ensure a smooth transition to the latest Workspace ONE UEM version, 
+                            ultimately enhancing the organization's mobility management capabilities.
                             <br><br>
                         </p>
                         <div style="text-align:center">
