--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 	<div id="Education" style="width:100%; text-align:center; padding-top:75px; margin-top:-30px; margin-bottom:-70px;min-width:600px;">
         <h1 style="font-size:2.3em; text-align: center">Education</h1><br>
         <div style="display: inline-block; width: 100%; margin-left:5px">
-            <div id="UMass2" style="max-width:1400px;z-index: 0; text-align:left; display: inline-block;position:relative; width:90%; height: 180px; margin-left:10px; margin-right:10px;background-color:rgb(166,225,250);padding: 30px;min-width:600px">
+            <div id="UMass2" style="max-width:1400px;z-index: 0; text-align:left; display: inline-block;position:relative; width:90%; height: 180px; margin-left:10px; margin-right:10px;background-color:rgb(177, 247, 214);padding: 30px;min-width:600px">
                 <img src="https://img.icons8.com/windows/64/000000/university.png" width="30px" style="float:left" />
                 <p style="width:90%; float:left;font-size:1.4em;margin-left:4px;color:#001C55;font-weight:600">West Bengal University of Technology</p><br>
                 <p style="width:90%;float:left;margin-top: 10px; font-size:1.0em;color:#001C55;font-weight:600">Bachelor of Technology</p><br>
