--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <a href="#Experience" class="nav-links">Experience</a>
                     </li>
                     <li>
-                        <a href="wasim_resume.pdf" class="nav-links" style="background-color: rgb(177, 247, 214,0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp;Resume</a>
+                        <a href="https://github.com/rajibul007/portfolio/raw/main/wasim_resume.pdf" class="nav-links" style="background-color: rgb(177, 247, 214,0.5);"><i class="fa fa-download"></i>&nbsp;&nbsp;Resume</a>
                     </li>
                 </ul>
             </nav>
