--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             <br><br>
                         </p>
                         <div style="text-align:center">
-                            <button id="rajibulGithub" style="background-color:#CCF0FF; border:none; width:180px; color:#001C55; padding:10px; cursor: pointer;" onmouseover="shadow('rajibulGithub')" onmouseout="unshadow('rajibulGithub')" onclick=" window.open('https://docs.vmware.com/en/VMware-Workspace-ONE-UEM/2306/UEM_Upgrade/GUID-AWT-UPGRADEINTRO.html','_blank')">
+                            <button id="wasimGithub" style="background-color:#CCF0FF; border:none; width:180px; color:#001C55; padding:10px; cursor: pointer;" onmouseover="shadow('wasimGithub')" onmouseout="unshadow('wasimGithub')" onclick=" window.open('https://docs.vmware.com/en/VMware-Workspace-ONE-UEM/2306/UEM_Upgrade/GUID-AWT-UPGRADEINTRO.html','_blank')">
                     <i class="fa fa-fw fa-github" style="color:#001C55"></i>
                 Project URL
                 </button>
