--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <h1 style="font-size:2.3em; text-align: center">Contact Me</h1><br>
         <p style="font-size:1.1em; margin-bottom:15px;">Feel free to send a message on LinkedIn...<br> or send me an email at akramw574@gmail.com.</p>
         <div class="tooltip">
-            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px; margin-right:10px;" onmouseover="shadow('giticon')" onmouseout="unshadow('giticon')" onclick="window.open('https://https://www.github.com/akramw','_blank')">
+            <div style="z-index: 0;text-align:center; display: inline-block;position:relative; width:50px; height: 50px; padding:10px;cursor: pointer; font-size: 50px; margin-right:10px;" onmouseover="shadow('giticon')" onmouseout="unshadow('giticon')" onclick="window.open('https://www.github.com/akramw','_blank')">
                 <i id="giticon" class="fa fa-github" style="color:#001C55; border-radius: 100px; width:50px"></i>
             </div>
             <span class="tooltiptext" style="margin-bottom:-15px">GitHub</span>
